fixed errors, all operations working now

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,6 @@
 </table>
 <br><br>
 <form action="/" method="POST">
-	<textarea type="text" name="newWish">Create a burger...</textarea>
+	<textarea type="text" name="burger_name">Create a burger...</textarea>
 	<button type="submit">Submit</button>
 </form>
