--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Eat the Burger</title>
+		<link href="/assets/css/burger_style.css" rel="stylesheet" />
 	</head>
 	<body>
 		{{{ body }}}
