adding heroku env varaible for mysql connection

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,7 @@
   </div>
 
   <div class="category devoured">
+  <h3>Someone already ate these:</h3>
   {{#each burgers}}
     {{#if this.devoured}}
       <div class="burger">
