--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 	<head>
 		<title>Eat the Burger</title>
 		<link href="/assets/css/burger_style.css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Courgette|Raleway" rel="stylesheet">
 	</head>
 	<body>
 		{{{ body }}}
